--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer {
+  html,
+  body,
+  #__next {
+    height: 100%;
+    color: white;
+  }
+}
